--- a/bower.json
+++ b/bower.json
@@ -9,8 +9,9 @@
     "ember-qunit": "0.4.7",
     "ember-qunit-notifications": "0.0.7",
     "ember-resolver": "~0.1.18",
-    "jquery": "^1.11.1",
+    "jquery": "2.1.4",
     "loader.js": "ember-cli/loader.js#3.2.0",
-    "qunit": "~1.17.1"
+    "qunit": "~1.17.1",
+    "foundation": "~5.5.0"
   }
 }
