--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "blueimp-md5": "^1.1.1",
     "broccoli-asset-rev": "^2.0.2",
     "broccoli-clean-css": "1.0.0",
+    "ember-browserify": "^1.0.5",
     "ember-cli": "1.13.6",
     "ember-cli-app-version": "0.4.0",
     "ember-cli-babel": "^5.0.0",
