--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ember-cli-uglify": "^1.0.1",
     "ember-data": "1.13.7",
     "ember-disable-proxy-controllers": "^1.0.0",
-    "ember-export-application-global": "^1.0.3"
+    "ember-export-application-global": "^1.0.3",
+    "markdown": "^0.5.0"
   }
 }
