--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "ember-data": "1.13.7",
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.3",
+    "ember-keyboard-shortcuts": "0.3.0",
     "gulp": "^3.9.0",
     "gulp-run": "^1.6.10",
     "markdown": "^0.5.0",
