--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,7 @@
 {
   "name": "devtools",
   "dependencies": {
+    "clipboard": "~1.5.5",
     "ember": "1.13.5",
     "ember-cli-shims": "ember-cli/ember-cli-shims#0.0.3",
     "ember-cli-test-loader": "ember-cli-test-loader#0.1.3",
@@ -9,10 +10,10 @@
     "ember-qunit": "0.4.7",
     "ember-qunit-notifications": "0.0.7",
     "ember-resolver": "~0.1.18",
+    "foundation": "~5.5.0",
     "jquery": "2.1.4",
     "loader.js": "ember-cli/loader.js#3.2.0",
-    "qunit": "~1.17.1",
-    "foundation": "~5.5.0",
-    "mousetrap": "~1.5.2"
+    "mousetrap": "~1.5.2",
+    "qunit": "~1.17.1"
   }
 }
