--- a/bower.json
+++ b/bower.json
@@ -2,18 +2,19 @@
   "name": "devtools",
   "dependencies": {
     "clipboard": "~1.5.5",
-    "ember": "1.13.5",
-    "ember-cli-shims": "ember-cli/ember-cli-shims#0.0.3",
-    "ember-cli-test-loader": "ember-cli-test-loader#0.1.3",
-    "ember-data": "1.13.7",
-    "ember-load-initializers": "ember-cli/ember-load-initializers#0.1.5",
-    "ember-qunit": "0.4.7",
-    "ember-qunit-notifications": "0.0.7",
-    "ember-resolver": "~0.1.18",
+    "ember": "2.2.0",
+    "ember-cli-shims": "0.0.6",
+    "ember-cli-test-loader": "0.2.1",
+    "ember-data": "^2.2.1",
+    "ember-load-initializers": "0.1.7",
+    "ember-qunit-notifications": "0.1.0",
     "foundation": "~5.5.0",
     "jquery": "2.1.4",
-    "loader.js": "ember-cli/loader.js#3.2.0",
+    "loader.js": "^3.5.0",
     "mousetrap": "~1.5.2",
-    "qunit": "~1.17.1"
+    "qunit": "~1.20.0"
+  },
+  "resolutions": {
+    "ember": "2.2.0"
   }
 }
