--- a/package.json
+++ b/package.json
@@ -21,32 +21,34 @@
   "devDependencies": {
     "autoprefixer": "^6.0.2",
     "blueimp-md5": "^1.1.1",
-    "broccoli-asset-rev": "^2.0.2",
+    "broccoli-asset-rev": "^2.2.0",
     "broccoli-clean-css": "1.0.0",
     "clipboard": "~1.5.5",
+    "ember-ajax": "0.7.1",
     "ember-browserify": "^1.0.5",
-    "ember-cli": "1.13.6",
-    "ember-cli-app-version": "0.4.0",
-    "ember-cli-babel": "^5.0.0",
+    "ember-cli": "2.2.0-beta.1",
+    "ember-cli-app-version": "^1.0.0",
+    "ember-cli-babel": "^5.1.5",
     "ember-cli-content-security-policy": "0.4.0",
-    "ember-cli-dependency-checker": "^1.0.0",
+    "ember-cli-dependency-checker": "^1.2.0",
     "ember-cli-foundation-sass": "1.1.1",
-    "ember-cli-htmlbars": "0.7.9",
-    "ember-cli-htmlbars-inline-precompile": "^0.1.1",
-    "ember-cli-ic-ajax": "0.2.1",
-    "ember-cli-inject-live-reload": "^1.3.0",
-    "ember-cli-qunit": "0.3.18",
-    "ember-cli-release": "0.2.3",
-    "ember-cli-sass": "3.1.0",
-    "ember-cli-sri": "^1.0.1",
-    "ember-cli-uglify": "^1.0.1",
-    "ember-data": "1.13.7",
-    "ember-disable-proxy-controllers": "^1.0.0",
-    "ember-export-application-global": "^1.0.3",
+    "ember-cli-htmlbars": "^1.0.1",
+    "ember-cli-htmlbars-inline-precompile": "^0.3.1",
+    "ember-cli-inject-live-reload": "^1.3.1",
+    "ember-cli-qunit": "^1.1.0",
+    "ember-cli-release": "0.2.8",
+    "ember-cli-sass": "5.2.0",
+    "ember-cli-sri": "^1.2.0",
+    "ember-cli-uglify": "^1.2.0",
+    "ember-data": "^2.2.1",
+    "ember-disable-proxy-controllers": "^1.0.1",
+    "ember-export-application-global": "^1.0.4",
     "ember-keyboard-shortcuts": "0.3.0",
     "ember-notify": "^4.3.1",
+    "ember-resolver": "^2.0.3",
     "gulp": "^3.9.0",
     "gulp-run": "^1.6.10",
+    "gulp-sass": "^2.1.1",
     "markdown": "^0.5.0",
     "postcss": "^5.0.5",
     "pretty-data": "^0.40.0"
