--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "jquery": "2.1.4",
     "loader.js": "^3.5.0",
     "mousetrap": "~1.5.2",
-    "qunit": "~1.20.0"
+    "qunit": "~1.20.0",
+    "darkroom": "darkroomjs#~2.0.1"
   },
   "resolutions": {
     "ember": "2.2.0"
