--- a/.jshintrc
+++ b/.jshintrc
@@ -4,7 +4,8 @@
     "window",
     "-Promise",
     "ga",
-    "Darkroom"
+    "Darkroom",
+    "download"
   ],
   "browser": true,
   "boss": true,
