--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "loader.js": "^3.5.0",
     "mousetrap": "~1.5.2",
     "qunit": "~1.20.0",
-    "darkroom": "darkroomjs#~2.0.1"
+    "darkroom": "darkroomjs#~2.0.1",
+    "downloadjs": "~1.4.1"
   },
   "resolutions": {
     "ember": "2.2.0"
