--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ember-cli-babel": "^5.1.5",
     "ember-cli-content-security-policy": "0.4.0",
     "ember-cli-dependency-checker": "^1.2.0",
+    "ember-cli-document-title": "0.3.0",
     "ember-cli-foundation-sass": "1.1.1",
     "ember-cli-htmlbars": "^1.0.1",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
