#25 SVG to Android resources tool

--- a/.jshintrc
+++ b/.jshintrc
@@ -5,7 +5,8 @@
     "-Promise",
     "ga",
     "Darkroom",
-    "download"
+    "download",
+    "JSZip"
   ],
   "browser": true,
   "boss": true,
