--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "ember-keyboard-shortcuts": "0.3.0",
     "ember-notify": "^4.3.1",
     "ember-resolver": "^2.0.3",
+    "emberx-select": "2.0.2",
     "gulp": "^3.9.0",
     "gulp-run": "^1.6.10",
     "gulp-sass": "^2.1.1",
